--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.11.16",
     "@reduxjs/toolkit": "^1.9.3",
     "@stripe/stripe-js": "^1.52.0",
+    "@tanstack/react-query": "^4.29.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
